<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ScrollView
        android:fadingEdge="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"

        >
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/about_app_version_text_size"
                android:textStyle="bold"
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_app_version_top_margin"
                android:text="@string/app_version"
                android:layout_marginBottom="@dimen/about_app_version_bottom_margin"
               />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/about_button_group_margin">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button_share"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/about_button_height"
                        android:layout_margin="@dimen/about_button_margin"
                        android:text="@string/btn_share_title"
                        android:layout_weight="1.0"

                        android:textSize="18sp"/>

                    <Button
                        android:id="@+id/button_rate"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/about_button_height"
                        android:layout_margin="@dimen/about_button_margin"
                        android:text="@string/btn_rate_title"
                        android:layout_weight="1.0"
                        android:textSize="18sp"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button_feedback"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/about_button_height"
                        android:layout_margin="@dimen/about_button_margin"
                        android:text="@string/btn_feedback_title"
                        android:layout_weight="1.0"

                        android:textSize="18sp"/>

                    <Button
                        android:id="@+id/button_apps"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/about_button_height"
                        android:layout_margin="@dimen/about_button_margin"
                        android:text="@string/btn_other_apps_title"
                        android:layout_weight="1.0"
                        android:textSize="18sp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/category_row_margin">
                    <ImageView
                        android:id="@+id/btnFacebook"
                        android:layout_width="@dimen/about_bottom_icons_size"
                        android:layout_height="@dimen/about_bottom_icons_size"
                        android:src="@drawable/about_facebook_icon"  />

                    <ImageView
                        android:id="@+id/btnTwitter"
                        android:layout_width="@dimen/about_bottom_icons_size"
                        android:layout_height="@dimen/about_bottom_icons_size"
                        android:src="@drawable/about_twitter_icon"  />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</RelativeLayout>